2003-10-04  Jon Schewe  <jpschewe@mtu.net>

	* docs/index.html: Added instructions for using jar to uncompress
	zip archives.  Perhaps we should just write a little Java tool
	that has a nice GUI (707892).

	* web/scoreEntry/select_team.jsp: Moved edit widgets around a bit
	to make it more obvious that the checkbox and dropdown are tied
	together (707865).

	* src/fll/web/playoff/Playoff.java (getDisplayString): Check the
	other team for a bye and don't show a score in that case (707872).

2003-10-03  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/model/SubjectiveTableModel.java (SubjectiveTableModel):
	Added total column on the subjective app (707863).

	* src/fll/web/admin/Tournaments.java (verifyData): Check for
	circularities in tournaments (766563).

2003-10-02  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/Submit.java: Added support for
	enumerations and checking restrictions on the server side (707877).

2003-10-01  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/Queries.java (updateScoreTotals): Added support for
	totaling of scores with enumerated goals (707877).

2003-09-29  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/scoreEntry/ScoreEntry.java: Added support for
	enumerated goals (707877).  Just need to fix the score computation
	now.

	* src/resources/fll.xsd: Removed namespace declaration from schema
	since JSTL 1.0 doesn't know how to properly handle namespaces.
	This also caused the web pages to be updated to properly reference
	the challenge title, I was just getting lucky that it was the
	first title attribute in the document.

2003-09-20  Jon Schewe  <jpschewe@mtu.net>

	* src/fll/web/report/FinalComputedScores.java (generateReport):
	Don't show scores from subjective categories that have 0 weight
	(809035).

	* src/fll/web/admin/UploadSubjectiveData.java
	(saveSubjectiveData): Now handle carriage returns in score.xml
	properly.

2003-09-17  Jon Schewe  <jpschewe@mtu.net>

	* docs/index.html: Updated with information about computers